--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <li>Interactive Streamlit Web App</li>
         </ul>
 
-        <a href="https://github.com/your-username/your-repository" class="button">View on GitHub</a>
-        <a href="https://your-streamlit-app-link" class="button" style="background: #28a745;">Run on Streamlit</a>
+        <a href="https://github.com/sanchaligorde/portfolio_optimizer" class="button">View on GitHub</a>
+        <a href="https://portfolioptimizer01.streamlit.app/" class="button" style="background: #28a745;">Run on Streamlit</a>
     </div>
 
 </body>
